update Intro sections

--- a/Books.tex
+++ b/Books.tex
@@ -1,8 +1,10 @@
 \begin{thebibliography}{99}
 
   \bibitem{AMNT} Meditations: A new translation (Gregory Hayes) - Marcus Aurelius - Modern Library
-  \bibitem{STC} Twelve Caesars -  Suetonius - Penguin Classics
-  \bibitem{TW} Walden - Henry David Thoreau - Penguin Classics
-  \bibitem Lectures and Sayings (Cynthia King) - Musonius Rufus - William B. Irvine
+  \bibitem{STC}  Twelve Caesars -  Suetonius - Penguin Classics
+  \bibitem{TW}   Walden - Henry David Thoreau - Penguin Classics
+  \bibitem{RLS}  Lectures and Sayings (Cynthia King) - Musonius Rufus - William B. Irvine
+  \bibitem{T}    The Talmud - Norman Solomon - Penguin Classics
+  \bibitem{EE}   Enchiridion - Epictetus - Dover thrift editions
 
 \end{thebibliography}
