--- a/Confidence.tex
+++ b/Confidence.tex
@@ -12,7 +12,7 @@ From within it you will find endless oppourtunities that elude other people}{Rob
 
 \hugeQuote{HM_DWW}{Don't water your weeds}{}{Harvey Mackay}{}{}
 
-\smallQuote{RG_FAIL}{Any knid of resistance or obstacle that crosses your path should be seen as yet another chance to improve your work}{Robert Green}{}
+\smallQuote{RG_FAIL}{Any knid of resistance or obstacle that crosses your path should be seen as yet another chance to improve your work}{Robert Greene}{}
 
 \hugeQuote{CP_FAIL}{You can adopt the attitude that there's nothing you can do}{, or you can see the challenge as a call to action}{Catherine Pulsifer}{S_CUCUMBER}{}
 \smallQuote{RH_FAIL}{You've already made it this far, might as well take one more step}{Ryan Holiday}{JP_STAND}
