--- a/Focus.tex
+++ b/Focus.tex
@@ -17,6 +17,8 @@
 \smallQuote{RH_LIFERS}{Steer clear of lifers, the toxic and charlatans.\newline You become who you know}{Ryan Holiday}{}
 \smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it}{George Bernard Shaw}{RH_PIGS2}
 
+\smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it}{George Bernad Shaw}{MA_NOW2}{}
+
 \smallQuote{DA_CDA}{You can do anything.\newline but you can't do everything.}{David Allen}{MA_SMALL}
 
 \smallQuote{BC_RYP}{Reaching your true potential involves choice. \newline How exactly you choose to excel is up to you}{Brian Colbert}{}
