--- a/Generosity.tex
+++ b/Generosity.tex
@@ -33,6 +33,9 @@ Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DW
 
 \hugeQuote{BT_GIVE}{Always give with remembering}{ and receive without forgetting}{Brian Tracy}{S_DO}{}
 
+\hugeQuote{DL_KINDNESS}{Show kindness whenever possible.}{}{Dalai Lama}{S_DO}{Hint: it's always possible.}
+
+\hugeQuote{MA_MISTAKE}{That you've made enough mistakes yourself}{. Your just like them.}{Marcus Aurelius}{SL_GIVE}{}
 
 \HugeQuote{SL_GIVE}{Forgiveness means a long memory of all the times when we wouldn't have gotten through life with someone cutting us some slack.}{ It is recognising that living with others is not possible without excusing errors}{School of Life}{}{See the modern virtues \llink{http://bit.ly/1XoP0tE}}
 %http://thephilosophersmail.com/wp-content/uploads/2014/04/Ten-Virtues.pdf
@@ -40,5 +43,3 @@ Yet, I do not intend that to be the definition of me}{Michel De Montaigne}{HM_DW
 %Unsure on which chapter
 \hugeQuote{LT_PAST}{Forgiveness means giving up hope}{ of a better past}{Lily Tomlin}{MA_NOW1}{}
 
-
-\hugeQuote{H_LIGHT}{Light cares can talk}{ huge ones are strick dumb}{Hippolitus}{}{}
