--- a/Gratitude.tex
+++ b/Gratitude.tex
@@ -1,25 +1,23 @@
 
 \input{GratitudeIntro.tex}
 
-
+%negative Visualisation 
 \hugeQuote{MDM_LOSS}{Certainly, if a man of understanding still has himself, he has lost nothing.}{}{Michel De Montaigne}{}{}
-
-
-\hugeQuote{RWE_STARS}{If the stars were to appear but one night every thousand years}{ how man would marvel}{Ralph Waldo Emerson}{}{}
-
-
-\hugeQuote{S_CUCUMBER}{Get used to your circumstances}{, complain about them as little as possible. Grasp whatever advantages they have to offer}{Seneca}{MA_CUCUMBER}{}
-
 \hugeQuote{E_MORTAL}{When you kiss your wife}{ or child, repeat to yourself, "I am kissing a mortal"}{Epictetus}{}{\ldots and she may be gone tomorrow.}
-
 \hugeQuote{MA_HMYD}{Treat what you don't have as non-existent}{
 
 	Look at what you have, the things you value most and think how much you'd crave them 
 	if you didn't have them
 }{Marcus Aurelius}{RH_HMY}{}
 
+%Awe
+\hugeQuote{RWE_STARS}{If the stars were to appear but one night every thousand years}{ how man would marvel}{Ralph Waldo Emerson}{}{}
 
 
 \HugeQuote{RG_WONDER}{The ability to express wonder and amazement}{ and seem like you mean it, is a rare a dying talent but one that is still greatly valued.}{Robert Greene}{RWE_STARS}{}
 
-\HugeQuote{CP_SCAR}{It is so hard to forget pain}{ but it is harder to remember sweetness. There is no scar for happiness}{Chuck Palaniuk}{}{}
+\hugeQuote{S_CUCUMBER}{Get used to your circumstances}{, complain about them as little as possible. Grasp whatever advantages they have to offer}{Seneca}{MA_CUCUMBER}{}
+
+\HugeQuote{CP_SCAR}{It is so hard to forget pain}{ but it is harder to remember sweetness. There is no scar for happiness}{Chuck Palaniuk}{}{} %possibly ref MR_WORK
+
+%\hugeQuote{MR_WORK}{If you accomplish something good with hard work}{, the labour passes quickly but the good endures; if you do something shameful in pursuit of pleasure, the pleasure passes quickly but the shame endures}{Musonius Rufus}{}{}
