--- a/Humility.tex
+++ b/Humility.tex
@@ -1,73 +1,61 @@
 \input{HumilityIntro.tex}
 
 
-\smallQuote{MA_NO}{No chorus of lamentation, No hysterics}{Marcus Aurelius}{}
 
-\clearpage
+\HugeQuote{TD_UNIQUE}{You are not a beautiful and unique snowflake.}{}{Tyler Durden}{}{}
 
-\hugeQuote{MT_VISIT}{If you're not humble}{ life will visit humility upon you}{Mike Tyson}{}{}
-\hugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground}{}{Sun Tzu}{}{}
-\hugeQuote{DLP_HELP}{Take the help}{}{Danielle La Porte}{}{}
+%life / death
 
-\hugeQuote{RH_LIVE}{Learn as if you were going to live}{ but live as if you were going to die tomorrow.}{Ryan Holiday}{}{} %TODO: check source
+\cleartorightpage
+
 \hugeQuote{IP_GAME}{After the game}{ the king and the pawn go back into the same box}{Italian Proverb}{}{}
 \hugeQuote{MA_LIVE}{You could leave this life right now.}{ Let that determine how you act.}{Marcus Aurelius}{}{}
 
+% help
+\cleartorightpage
+\hugeQuote{ST_GUIDE}{He who does not employ a guide cannot gain advantage from the ground.}{}{Sun Tzu}{}{}
+\hugeQuote{DLP_HELP}{Take the help.}{}{Danielle La Porte}{}{}
+
+
+%fate
+\cleartorightpage
+
 \hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
-\hugeQuote{MA_LUCK1}{To accept it without arrogance,}{to let it go with indifference}{Marcus Aurelius}{E_LUCK}{}
+\hugeQuote{MT_VISIT}{If you're not humble}{ life will visit humility upon you}{Mike Tyson}{}{}
+\hugeQuote{MA_LUCK1}{To accept it without arrogance}{, to let it go with indifference}{Marcus Aurelius}{}{}
 
-
-\hugeQuote{RH_CHANGE}{Your opinion is either dependent on the facts or it's not;}{\newline
-When they change you should shift along with them}{Ryan Holiday}{JKZ_ENDURE}{The facts were always there, of course, just unclear or hidden. Think clearly about what you're looking at. cf \ref{NT_FAIL}}
-
-
-\hugeQuote{MA_CHANGE}{Remember that to change your mind}{ and accept correction are mere acts too}{Marcus Aurelius}{}{and so, under our control}
-
-
-\hugeQuote{JS_FOLLY}{It is the folly of many}{ to mistake the echo of a London coffee shop for the voice of a kingdom}{Jonathan Swift}{}{}
-
+%growth mindset
+\cleartoleftpage
 %possible link to seneca quote about /thoughts at the door/
-\HugeQuote{MA_ALWAYS}{Everywhere, at each moment, you have the option}{:
+\smallQuote{MA_ALWAYS}{Everywhere, at each moment, you have the option:
 \begin{itemize}
 \item to accept this event with humility
 \item to treat each person as he should be treated
 \item to approach this thought with care, so that nothing irrational creeps in
 \end{itemize}}{Marcus Aurelius}{WG_JUDGE}{}
 
-
-\hugeQuote{MA_MISTAKE}{That you've made enough mistakes yourself}{. Your just like them.}{Marcus Aurelius}{SL_GIVE}{}
-
-\hugeQuote{MA_EXIT}{So make your exit}{ with grace\newline
-the same grace shown too you}{Marcus Aurelius}{}{}
-
-
-\hugeQuote{ME_BEGIN}{Be willing}{ to be a beginner every single morning}{Meister Eckhart}{EP_FOOL}{}
-
+\smallQuote{ME_BEGIN}{Be willing to be a beginner every single morning}{Meister Eckhart}{EP_FOOL}{}
 \smallQuote{MC_BOAST}{Boasting is what a boy does, because he has no real  effect on the world.}{Matthew Crawford}{C_BOAST}
 
+\smallQuote{C_BOAST}{A superior man is modest in his speech but exceeds in his actions.}{Confucious}{}{}
 
-\hugeQuote{C_BOAST}{A superior man is modest in his speech}{ but exceeds in his actions}{Confucious}{}{}
+\cleartorightpage
+\hugeQuote{RH_CHANGE}{Your opinion is either dependent on the facts or it's not;}{\newline
+When they change you should shift along with them}{Ryan Holiday}{JKZ_ENDURE}{The facts were always there, of course, just unclear or hidden. Think clearly about what you're looking at. cf. \ref{NT_FAIL}}
 
+\hugeQuote{MA_CHANGE}{Remember that to change your mind}{ and accept correction are mere acts too}{Marcus Aurelius}{}{and so, under our control}
 
+\hugeQuote{WS_FOOL}{The fool doth think he is wise and the wise man knows himself to be a fool}{}{William Shakespeare}{P_TALK}{}
 
-\hugeQuote{RG_CRITICISM}{Never be so self absorbed}{ as to beleive that the master is interested in your criticisms of him, now matter how accurate they are}{Robert Greene}{}{}
-
-\hugeQuote{SP_CRITICISM}{Listen to their criticism}{, take it and use it to improve}{}{}{}
+\hugeQuote{RG_CRITICISM}{Never be so self absorbed}{ as to believe that the master is interested in your criticisms of him, now matter how accurate they are}{Robert Greene}{}{but always be ready to listen and use the criticism you hear.}
 
 \hugeQuote{JVG_VALUE}{A great failing}{: to see yourself as more than you are and value yourself at less than your true worth}{John Von Goethe}{}{} %cf p63
 
-\hugeQuote{WS_FOOL}{The fool doth think e is wise and the wise man knows himself to be a fool}{}{William Shakespeare}{P_TALK}{}
+%bigger view
+\cleartorightpage
+\hugeQuote{JS_FOLLY}{It is the folly of many}{ to mistake the echo of a London coffee shop for the voice of a kingdom.}{Jonathan Swift}{}{}
 
-\hugeQuote{CTG_COUNSEL}{Diversity in counsel}{, unity in command}{Cyrus the Great}{ST_GUIDE}{} % possibly move to confidence
+\hugeQuote{CTG_COUNSEL}{Diversity in counsel}{.\newline
+Unity in command.}{Cyrus the Great}{ST_GUIDE}{} % possibly move to confidence
 
-
-
-\hugeQuote{TD_UNIQUE}{You are not a beautiful and unique snowflake}{}{Tyler Durden}{}{}
-
-
-\hugeQuote{JDB_UNNAMED}{The unnamed should not be mistaken for the non-existant}{}{Jon de la Brugére}{}{}
-
-
-
-
-\hugeQuote{GBS_CBD}{Those who say it cannot be done}{ should not interrupt those who are doing it}{George Bernad Shaw}{MA_NOW2}{}
+\hugeQuote{JDB_UNNAMED}{The unnamed should not be mistaken for the non-existent.}{}{Jon de la Brug\'{e}re}{}{}
