--- a/Leadership.tex
+++ b/Leadership.tex
@@ -21,7 +21,7 @@
 
 \smallQuote{AC_DO}{As I grow older I pay less attention to what people say, I just watch what they do.}{Andrew Carnegie}{}
 
-\smallQuote{RG_DO}{Pay less attention to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Greeen}{MA_LISTEN}
+\smallQuote{RG_DO}{Pay less attention to the words people use and greater attention to the tone of their voice, the look in their eyes and their body language}{Robert Greene}{MA_LISTEN}
 
 \smallQuote{RL_LISTEN}{Learning to listen is the most valuable thing you can do}{Robert Love}{AC_DO}{}
 
@@ -34,7 +34,7 @@
 
 \hugeQuote{BW_TALK}{There is no use talking about the problem}{ unless you talk about the solution}{Betty Williams}{}{}
 
-\hugeQuote{TP_UNDER}{Under promise;}{ over deliver}{Tom Peters}{}{}
+\hugeQuote{TP_UNDER}{Under promise;}{ over deliver}{Tom Peters}{C_BOAST}{}
 
 \hugeQuote{HF_REP}{You can't build a reputation}{ on what you're going to do.}{Henry Ford}{}{}
 
