--- a/Learning.tex
+++ b/Learning.tex
@@ -35,5 +35,7 @@
 
 \hugeQuote{MDM_MAKE}{It is a greater thing to make oneself impassable}{ than to be impassable as a property of one's nature.}{Michel De Monataigne}{}{}
 
-\hugeQuote{S_FOLLY}{It's it the height of folly to learn inessential things}{ when time is so desperately short}{Seneca}{MA_DL}{}
+\hugeQuote{S_FOLLY}{Isn't it the height of folly to learn inessential things}{ when time is so desperately short?}{Seneca}{MA_DL}{}
+
+\hugeQuote{RH_LIVE}{Learn as if you were going to live}{ but live as if you were going to die tomorrow.}{Ryan Holiday}{}{} %TODO: check source
 
