--- a/project.tex
+++ b/project.tex
@@ -77,11 +77,12 @@
 % \part{Notes}
 
 \refstepcounter{chapter}
-\addcontentsline{toc}{chapter}{\protect\numberline{\thechapter}Bibliography}
+\addcontentsline{toc}{chapter}{\protect \numberline{}Bibliography}
+% \addcontentsline{toc}{chapter}{\protect\numberline{\thechapter}Bibliography}
 \input{Books}
 
 \refstepcounter{chapter}
-\addcontentsline{toc}{chapter}{\protect\numberline{\thechapter}Index}
+\addcontentsline{toc}{chapter}{\protect\numberline{}Index}
 
 \printindex
 
