--- a/ConfidenceIntro.tex
+++ b/ConfidenceIntro.tex
@@ -1,13 +1,14 @@
 \cleardoublepage
 \begin{multicols}{2}
 
-It's a fine line between arrogance and confidence. We need to be sure about what we're about to do but we need to remember that we're only human and we will make errors in judgement (just as we have done in the past (\S \ref{MA_MISTAKE})). 
+It's a fine line between arrogance and confidence. We need to be sure about what we're about to do but we need to remember that we're only human and we will make errors in judgement, just as we have done in the past (\S \ref{MA_MISTAKE}). 
 
-But we're not our past (\S \ref{DLP_NYG} and \ref{LB_SEP}) and we can't let our past behaviour define how we behave now. Once we've learnt what we can from those events, we need to understand that we can't change what happened but using what we've learnt, we can have an impact on what happens next.
+We can't let our past (\S \ref{DLP_NYG} and \ref{LB_SEP}) define our self image and we can't let our past behaviour define how we behave now. Once we've learnt what we can from those events, we need to understand that we can't change what happened but using what we've learnt, we can have an impact on what happens next.
 
-Unchecked, that negative self talk and fear of failure can be paralysing but if we structure our tasks and goals in the right way we can control it. Somewhat. If we aim for things which are under our control we can be more sure of success. In areas where we have some control (or none at all) we need to consider what would constitute a successful outcome and what behaviours might influence that. We're not looking to win the Thursday night poker game, we're looking to make fewer errors than last week. We're not looking to get a raise at work, we're looking to consistently be valuable to our boss.
+Unchecked, our negative self talk and fear of failure can be paralysing but if we structure our tasks and goals in the right way we can control it. Somewhat. If we aim for things which are under our control we can be more sure of success. In areas where we have some control (or none at all) we need to consider what would constitute a successful outcome and what behaviours might influence that. We're not looking to win the Thursday night poker game, we're looking to make fewer errors than last week. We're not looking to get a raise at work, we're looking to consistently be valuable to our boss. We're not looking to win The Turner Prize, we're looking to hone our craft and produce a vast portfolio of work.
+Incidentally if we manage to consistently do those things we stand a much better chance of hitting the original external targets but that's none of our concern because we're focussed on what we can control\ldots
 
-Ultimately we don't have control of how things will turn out by external metrics and that can be a big hit on our confidence, but if we change our success criteria and focus on internal metrics we stand a better chance of avoiding failure. Not entirely, of course.
+Ultimately we don't have control of how things will turn out as measured by external metrics and that can be a big hit on our confidence, but if we change our success criteria and focus on internal metrics we stand a better chance of avoiding failure. Not entirely, of course.
 
 Being bold enough to act in the face of that uncertainty is what we're aiming for.
 
