--- a/GratitudeIntro.tex
+++ b/GratitudeIntro.tex
@@ -1,17 +1,15 @@
 \cleartorightpage
 \begin{multicols}{2}
 
-Just looking at the massively improbable set of circumstances needed to get us here in one piece we should be able to grab handfulls of gratitude from the air. We don't of course as we take things for granted after a while. We forget quickly that we're lucky enough to be literate and high enough up Maslow's heirarchy of needs\llink{http://bit.ly/1BYf2Nd} to have time to focus on our better selves having ticked off the basics a long time ago.
+Just looking at the massively improbable set of circumstances needed to get us here in one piece we should be able to grab handfulls of gratitude from the air. We don't though, we take things for granted after a while. We forget quickly that we're lucky enough to be literate and high enough up Maslow's heirarchy of needs\llink{http://bit.ly/1BYf2Nd} to have time to focus on our better selves having ticked off the basics a long time ago. 
 
 It's not just the things we have already that we take for granted, it's someone taking extra effort on our behalf or extending an unexpected generosity to us. We become so cyncical that we expect others to be on the make or we sniffily say that they're "just doing their job".
 
-If we can't rely on ourselves to be spontaneously grateful, we need a little help to remind us and correct our course.
+If we can't rely on ourselves to be  grateful, we need a little help to remind us and correct our course.
 
-The stoics had a, seemingly, counter-intuitive routine to make sure we appreciated the things we have and the people around us. They suggested that we occasionally take the time to imagine our life without our loved ones and our most treasured possessions (\S \ref{E_MORTAL}). By routinely putting ourselves through the loss of a limb or a loved one, we'll feel truly grateful when they are with you (or still attached).
+The stoics had a, seemingly, counter-intuitive routine to make sure we appreciated the things we have and the people around us. They suggested that we occasionally take the time to imagine our life without our loved ones and our most treasured possessions (\S \ref{E_MORTAL}). By routinely putting ourselves through the loss of a limb or a loved one, we'll feel truly grateful when they are with you (or still connected to the rest of your body).
 
-
-
-
+We know that we should behave as though this is our final day (\S \ref{RH_LIVE} and \ref{MA_LIVE}) so simply waking up provides us with a great source of gratitude for the day ahead. No matter what else happens (\S \ref{MA_TRUST}) not only will we be ready for it but we'll be thankful for the chances brought us for improving ourselves by focussing on the aims we have.
 
 \end{multicols}
 \clearpage
