--- a/Patience.tex
+++ b/Patience.tex
@@ -29,6 +29,8 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 \HugeQuote{RH_TALK}{The best advice I ever got}{ was "shut up"}{Ryan Holiday}{}{Always say less than necessary\llink{http://tcat.tc/1IwHzGd}.}
 
+\hugeQuote{H_LIGHT}{Light cares can talk}{ huge ones are strick dumb}{Hippolitus}{}{}
+
 \hugeQuote{BG_ANGER}{Never do anything}{ when you are in a temper, for you will do everything wrong}{Baltazar Gra\c{c}ian}{}{}
 
 \hugeQuote{RG_ANGER}{Anger and emotion are strategically conterproductive}{. You must always stay calm and objective}{Robert Greene}{}{}
