add Schopenhauer quote on humility

--- a/Books.tex
+++ b/Books.tex
@@ -6,5 +6,6 @@
   \bibitem{RLS}  Lectures and Sayings (Cynthia King) - Musonius Rufus - William B. Irvine
   \bibitem{T}    The Talmud - Norman Solomon - Penguin Classics
   \bibitem{EE}   Enchiridion - Epictetus - Dover thrift editions
+  \bibitem{SCM}  Counsels and Maxims - Arthur Schopenhauer - Start Publishing
 
 \end{thebibliography}
