--- a/Focus.tex
+++ b/Focus.tex
@@ -83,7 +83,7 @@ Then go around them.}{Marcus Aurelius}{PL_DST}{}
 
 \hugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
 
-\hugeQuote{FP_BACK}{It's a long road there's no turning back}{Funki Porcini}{}
+\hugeQuote{FP_BACK}{It's a long road there's no turning back}{}{Funki Porcini}{}
 
 
 \hugeQuote{RH_6MONTHS}{In six months}{ you will have discarded most of what you claim is important right now.}{Ryan Holiday}{}{}
