--- a/Humility.tex
+++ b/Humility.tex
@@ -18,6 +18,8 @@
 
 
 %fate
+\cleartoleftpage
+\smallQuote{AS_LUCK}{Men of any worth soon come to see that they are in the hands of Fate and gratefully submit to be moulded by its teachings}{Arthur Schopenhauer}{} 
 \cleartorightpage
 
 \hugeQuote{E_LUCK}{Foolish is the man who delights in his good fortune, supposing it will never leave him.}{}{Euripides}{S_ENDURE}{}
