update page size based on penguin pocket classics

--- a/project.tex
+++ b/project.tex
@@ -1,4 +1,7 @@
-\documentclass[a5paper]{book}
+\documentclass{book}
+% perfect size would be the same as a pocket penguin
+%Product Dimensions: 11.1 x 0.9 x 18.1 cm
+\usepackage[paperheight=18.1cm,paperwidth=11.1cm]{geometry}
 
 \usepackage{tabularx}
 \usepackage{ifthen}
