--- a/definitions.tex
+++ b/definitions.tex
@@ -3,13 +3,13 @@
 	\refstepcounter{section}
 	\addcontentsline{toc}{section}{\protect\numberline{\thesection}}
 	
-	\begin{tabularx}{\textwidth}{ lr}
-  		\multicolumn{2}{p{1.0\textwidth}}{\label{#1}#2}
+	\begin{tabularx}{\linewidth}{ lr}
+  		\multicolumn{2}{p{1.0\linewidth}}{\label{#1}#2}
   		\tabularnewline \tabularnewline
   		\ifthenelse{\equal{}{#4}}{}{\S \ref{#4}}& #3 \thesection \index{#3}
   		\tabularnewline
   		\tabularnewline
-  		\multicolumn{2}{p{1\textwidth}}{#5} 
+  		\multicolumn{2}{p{1\linewidth}}{#5} 
   	\end{tabularx}
 	\bigskip
 	\hrulefill
