--- a/Leadership.tex
+++ b/Leadership.tex
@@ -108,7 +108,7 @@ If you can't do that the blame lies with you or no one.}{Marcus Aurelius}{HT_CRE
 \smallQuote{PS_RAGE}{Patience Wounded too often becomes rage.}{Publius Syrus}{}
 
 
-\hugeQuote{FR_DTR}{When youbdo things right}{, people will wonder if you've done anything at all}{Remains of a computerised space probe which collided with God, Futurama}{}{Probably} 
+\hugeQuote{FR_DTR}{When you do things right}{, people will wonder if you've done anything at all}{Remains of a computerised space probe, Futurama}{}{} 
 
 \HugeQuote{KT_NUP}{It's not up to us to make this a better place}{}{Kate Tempest}{}{It is. We can do it one person at a time.} 
 
