update layout for Action and focus chapters

--- a/Action.tex
+++ b/Action.tex
@@ -1,45 +1,55 @@
 \input{ActionIntro.tex}
 
-\smallQuote{BD_ACT}{Action may not always bring happiness, but without action there is none}{Benjamin Disraelli}{}
+\cleartoleftpage
 
-\smallQuote{MG_ACT}{You may never know what results come from your action but if you do nothing there will be no result}{Mahatma Ghandi}{}
+%courage to act
 
+\smallQuote{BD_ACT}{Action may not always bring happiness, but without action there is none.}{Benjamin Disraelli}{}
+
+\smallQuote{MG_ACT}{You may never know what results come from your action but if you do nothing there will be no result.}{Mahatma Ghandi}{}
+
+\cleartorightpage
+\HugeQuote{MG_AEP}{Action expresses priority}{}{Mahatma Ghandi}{}{}
+
+
+\hugeQuote{LT_FAT}{Fac aut tace}{}{}{}{Do or be silent.}
+\hugeQuote{FB_CWA}{Code wins.}{}{}{}{}
+\hugeQuote{RG_DDX}{Demonstrate}{\newline don't explicate.}{Robert Greene}{}{}
+\cleartorightpage
+\HugeQuote{YB_FORK}{When you come to a fork in the road}{, take it.}{Yogi Bera}{}{}
+
+\cleartoleftpage
+%focus on what you can do 
 \smallQuote{MA_NOW1}{Each of us lives only now in this brief instant. The rest has been lived already or is impossible to see}{Marcus Aurelius}{}
 
 \smallQuote{MA_CREDIT}{Do what nature demands. Get a move on if you have it in you and don't worry whether anyone will give you any credit for it.
 And don't go expecting Plato's "Republic" either, just be satisfied with even the smallest progress}{Marcus Aurelius}{}
 
-\clearpage
-\HugeQuote{MG_AEP}{Action expresses priority}{}{Mahatma Ghandi}{}{}
-\cleardoublepage
+\cleartorightpage
+\hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it}{Rudy Guilliani}{BW_TALK}{}
 
-\hugeQuote{LT_FAT}{Fac aut tace}{}{}{}{Do or be silent}
-\hugeQuote{FB_CWA}{Code wins}{}{}{}{}
-\hugeQuote{RG_DDX}{Demonstrate}{ don't explicate}{Robert Greene}{}{}
-\cleardoublepage
+\hugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit}{Harry S Truman}{}{}
+\cleartoleftpage
+\hugeQuote{MA_NOW2}{Stick to what's in front of you}{; \newline
+Idea, action, utterance}{Marcus Aurelius}{}{}
+
+\cleartorightpage
+\HugeQuote{JL_LIFE}{Life is what happens}{ while you are busy making other plans}{John Lennon}{}{}
+
+%consistency
+
 \hugeQuote{AR_HABIT}{Quality is not an act.}{ It is a habit.}{Aristotle}{}{}
 \hugeQuote{RH_HABIT}{How you do anything is how you do everything}{}{Ryan Holiday}{}{}
 \hugeQuote{MLK_HABIT}{If I cannot do great things}{ I can do small things in a great way}{Martin Luther King Jr.}{}{}
 
-\hugeQuote{MA_NOW2}{Stick to what's infront of you}{; \newline
-Idea, action, utterance}{Marcus Aurelius}{}{}
 
-\hugeQuote{HT_CREDIT}{It's amazing what you can accomplish}{ if you don't care who gets the credit}{Harry S Truman}{}{}
+\cleartoleftpage
 
-\cleardoublepage
+\hugeQuote{JVG_ACT}{To think is easy}{.\newline
+To act is hard.\newline
+But the hardest thing of all is to act in accordance with your thinking.}{John Von Goethe}{}{}
 
-\HugeQuote{JVG_ACT}{To think is easy}{\newline
-To act is hard\newline
-But the hardest thing of all is to act in accordance with your thinking}{John Von Goethe}{}{}
-
-\HugeQuote{YB_FORK}{When you come to a fork in the road}{, take it}{Yogi Bera}{}{}
-
-
-\HugeQuote{JL_LIFE}{Life is what happens}{ while you are busy making other plans}{John Lennon}{}{}
-
-
-\hugeQuote{RG_PROBLEM}{When you confront a problem}{ you begin to solve it}{Rudy Guilliani}{BW_TALK}{}
-
+\cleartorightpage
 
 \hugeQuote{MR_ACT}{Although understanding the theory behind the action enables one to speak}{, it is the practice which enables one to act}{Musonius Rufus}{}{}
 
