--- a/ActionIntro.tex
+++ b/ActionIntro.tex
@@ -1,7 +1,9 @@
 \cleardoublepage
 \begin{multicols}{2}
 
-Without action of some kind our plans for improvement simply won't get very far. We need to look at the mamoth task in front of us and take that scary first step (and then the next). 
+The \emph{Pointers} here are not things to be mulled over and analysed in great depth, they're included to give us the little nudges and course corrections for our actions.
+
+Without action of some kind our plans for improvement simply won't get very far. We need to look at the mammoth task in front of us and take that scary first step (and then the next). 
 Taking action isn't always easy and choosing the right move (\S \ref{JVG_ACT}) at the right time (\S \ref{ST_WAIT}) can be stupefyingly hard.
 The hope is though that we won't be paralysed and we will make an impact on the things important to us.
 
@@ -12,4 +14,3 @@ We need to remember what's important to us. Remember how much time we have and h
 We also need to remember that people will see where we spend our time and the choices made. No matter what we say they will believe what they see (and don't see). 
 
 \end{multicols}
-\clearpage
