--- a/Focus.tex
+++ b/Focus.tex
@@ -1,42 +1,49 @@
 
 \input{FocusIntro.tex}
 
-\smallQuote{CYM}{Call your mom}{}{}
+\cleartorightpage
+\HugeQuote{CYM}{Call your mom}{}{}{}
  
-\cleardoublepage
+\cleartoleftpage
 
-\hugeQuote{PL_DST}{Don't spend time with people you don't like}{}{Prue Leith}{}{}
-\hugeQuote{LC_COMPANY}{You are }{whatever the company you keep is}{Lord Chesterfield}{}{}
+%company
 
-\hugeQuote{C_HONOR}{Let your mind dwell}{ on examples of honor}{Cicero}{}{} % cf machiavelli ?
-
-\hugeQuote{T_GM}{From good men you will learn good things}{, if you mix with bad men you will destroy even your existing sense.}{Theognis}{}{} 
-
-\clearpage
+\smallQuote{LC_COMPANY}{You are whatever the company you keep is}{Lord Chesterfield}{}{}
+\smallQuote{C_HONOR}{Let your mind dwell on examples of honor}{Cicero}{}{} % cf machiavelli ?
 
 \smallQuote{RH_LIFERS}{Steer clear of lifers, the toxic and charlatans.\newline You become who you know}{Ryan Holiday}{}
 \smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it}{George Bernard Shaw}{RH_PIGS2}
+%todo: plenty of space above
+\cleartoleftpage
+\HugeQuote{T_GM}{From good men you will learn good things}{, if you mix with bad men you will destroy even your existing sense.}{Theognis}{}{} 
 
-\smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it}{George Bernad Shaw}{MA_NOW2}{}
+\cleartorightpage
+\HugeQuote{PL_DST}{Don't spend time with people you don't like}{}{Prue Leith}{}{}
+\cleartoleftpage
 
+
+%TODO possibly humility
+% \smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it}{George Bernad Shaw}{MA_NOW2}{}
+
+%task selection
+	
 \smallQuote{DA_CDA}{You can do anything.\newline but you can't do everything.}{David Allen}{MA_SMALL}
+\smallQuote{BC_RYP}{Reaching your true potential involves choice. \newline How exactly you choose to excel is up to you.}{Brian Colbert}{}
+\smallQuote{MA_NRA}{No random actions, none not based on underlying principles.}{Marcus Aurelius}{}
+\smallQuote{BJ_DWYL}{If you're not doing what you love, you're wasting your time}{Billy Joel}{OW_HW}
 
-\smallQuote{BC_RYP}{Reaching your true potential involves choice. \newline How exactly you choose to excel is up to you}{Brian Colbert}{}
-
-\smallQuote{MA_NRA}{No random actions, none not based on underlying principles}{Marcus Aurelius}{}
-
-\smallQuote{BJ_DWYL}{If you're not doing what you love, you're wasting your time}{Billy Joel}{}
-
+\cleartorightpage
 \HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{}{Marcus Aurelius}{}
 
 
-\clearpage
+\cleartoleftpage
 
 \HugeQuote{TF_SLO}{Slow down}{ and remember this;\newline
 Most things make no difference. Being busy is a form of laziness. Lazy thinking and indiscriminate action.}{Tim Ferriss}{MA_DL}{
 See: efficacy hacks\llink{http://bit.ly/1EDPjUQ} and a not to do list\llink{http://bit.ly/1EDPu2H}.
 }
 
+\cleartorightpage
 \HugeQuote{MA_DL}{If you seek tranquillity, do less}{ or (more accurately) do what's essential because most of what we say and do is not essential.\newline
 Ask yourself at every moment "is this necessary?"}
 {Marcus Aurelius}{}{}
@@ -45,9 +52,10 @@ Ask yourself at every moment "is this necessary?"}
 
 \hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters}{Epictetus}{}{}
 
-\newpage
 
 \hugeQuote{OW_HW}{Hard work}{ is simply the refuge of people how have nothing better to do}{Oscar Wilde}{}{}
+
+\hugeQuote{BD_LIFE}{A man is successful}{ if he gets up in the morning, goes to bed at night and in between does what he wants to.}{Bod Dylan}{BJ_DWYL}{}
 
 \hugeQuote{RH_PIGS2}{Never try to teach a pig to sing.}{\newline It wastes time and annoys the pig.}{Robert Heinlein}{GBS_PIGS1}{} 
 
@@ -90,7 +98,5 @@ Then go around them.}{Marcus Aurelius}{PL_DST}{}
 
 \HugeQuote{TF_HARD}{Sometimes the hard stuff is hard because you shouldn't do it in the first place}{}{Tim Ferriss}{}{}
 
-\hugeQuote{BD_LIFE}{A man is successful}{ if he gets up in the morning, goes to bed at night and in between does what he wants to.}{Bod Dylan}{BJ_DWYL}{}
-
-
+\cleartorightpage
 \HugeQuote{MT_NOMFUP}{NoMFuP}{}{Malcolm Tucker}{}{Handy to remind ourselves what we should be paying attention to.}
