--- a/PatienceIntro.tex
+++ b/PatienceIntro.tex
@@ -3,7 +3,7 @@
 
 We know how important action is, but acting rashly, without care and attention can do serious harm to ourselves and can undo the good progress we've made towards our aims.
 
-In many ways for our "handbook" knowing where we're headed is more important than getting there quickly, especially when you consider that we may not even arrive. So we should consider that the manner in which we undertake the journey is at least as important as the desination.
+In many ways, for us at least, knowing where we're headed is more important than getting there quickly, especially when you consider that we may not even arrive. So we should consider that the manner in which we undertake the journey is at least as important as the desination.
 
 To some patience can look like a lack of engagement or a lack of committment but there's often more harm done through an emotional (over) reaction (\S \ref{MA_GRIEF}) and certainly we're only likely to waste time and do everything badly if we act or speak angrily (\S \ref{BG_ANGER}).
 
@@ -16,4 +16,4 @@ It's a lot of effort to be patient enough to maintain a level of control so that
 With a little help we can be sure we're up to it.
 
 \end{multicols}
-\clearpage
+
