--- a/definitions.tex
+++ b/definitions.tex
@@ -11,7 +11,8 @@
   		\tabularnewline
   		\multicolumn{2}{p{1\linewidth}}{#5} 
   	\end{tabularx}
-	\bigskip
+	% \bigskip
+	
 	\hrulefill
 }
 
@@ -22,7 +23,6 @@
 
 %TODO: refactor for consistency
 \newcommand{\HugeQuote}[6]{
-    \cleardoublepage
 	\vspace*{\fill}
 	\standardQuote{#1}{\huge{#2}\huge{#3}}{#4}{#5}{#6}
 	\vspace*{\fill}
