--- a/Focus.tex
+++ b/Focus.tex
@@ -6,67 +6,72 @@
  
 \cleartoleftpage
 
-%company
+%company and how you spend your time
 
-\smallQuote{LC_COMPANY}{You are whatever the company you keep is}{Lord Chesterfield}{}{}
-\smallQuote{C_HONOR}{Let your mind dwell on examples of honor}{Cicero}{}{} % cf machiavelli ?
+\smallQuote{LC_COMPANY}{You are whatever the company you keep is.}{Lord Chesterfield}{}{}
+\smallQuote{C_HONOR}{Let your mind dwell on examples of honour.}{Cicero}{}{} % cf machiavelli ?
 
-\smallQuote{RH_LIFERS}{Steer clear of lifers, the toxic and charlatans.\newline You become who you know}{Ryan Holiday}{}
-\smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it}{George Bernard Shaw}{RH_PIGS2}
+\smallQuote{RH_LIFERS}{Steer clear of lifers, the toxic and charlatans.\newline You become who you know.}{Ryan Holiday}{}
+\smallQuote{GBS_PIGS1}{Never wrestle with pigs, you both get dirty and the pig likes it.}{George Bernard Shaw}{RH_PIGS2}
 %todo: plenty of space above
 \cleartoleftpage
 \HugeQuote{T_GM}{From good men you will learn good things}{, if you mix with bad men you will destroy even your existing sense.}{Theognis}{}{} 
 
 \cleartorightpage
-\HugeQuote{PL_DST}{Don't spend time with people you don't like}{}{Prue Leith}{}{}
+\HugeQuote{PL_DST}{Don't spend time with people you don't like.}{}{Prue Leith}{}{}
 \cleartoleftpage
 
+\hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{RH_HMY}{}
+
+\hugeQuote{FC_OWN}{The things you used to own}{. Now they own you}{Jack, Fight Club}{}{}
+
+\hugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
+
+%todo: possibly drop
+% \hugeQuote{FP_BACK}{It's a long road there's no turning back}{}{Funki Porcini}{}
 
 %TODO possibly humility
-% \smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it}{George Bernad Shaw}{MA_NOW2}{}
+% \smallQuote{GBS_CBD}{Those who say it cannot be done should not interrupt those who are doing it}{George Bernard Shaw}{MA_NOW2}{}
+
 
 %task selection
-	
+\cleartoleftpage	
 \smallQuote{DA_CDA}{You can do anything.\newline but you can't do everything.}{David Allen}{MA_SMALL}
 \smallQuote{BC_RYP}{Reaching your true potential involves choice. \newline How exactly you choose to excel is up to you.}{Brian Colbert}{}
 \smallQuote{MA_NRA}{No random actions, none not based on underlying principles.}{Marcus Aurelius}{}
-\smallQuote{BJ_DWYL}{If you're not doing what you love, you're wasting your time}{Billy Joel}{OW_HW}
+\smallQuote{BJ_DWYL}{If you're not doing what you love, you're wasting your time.}{Billy Joel}{OW_HW}
 
-\cleartorightpage
-\HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{}{Marcus Aurelius}{}
+%todo: position ? 
+\hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters}{Epictetus}{}{}
+
+\hugeQuote{MT_NOMFUP}{NoMFuP}{}{Malcolm Tucker}{ST_UTU}{Handy to remind ourselves what we should be paying attention to.}
 
 
 \cleartoleftpage
-
-\HugeQuote{TF_SLO}{Slow down}{ and remember this;\newline
-Most things make no difference. Being busy is a form of laziness. Lazy thinking and indiscriminate action.}{Tim Ferriss}{MA_DL}{
+\HugeQuote{TF_SLO}{Slow down}{ and remember this; most things make no difference. Being busy is a form of laziness. Lazy thinking and indiscriminate action.}{Tim Ferriss}{MA_DL}{
 See: efficacy hacks\llink{http://bit.ly/1EDPjUQ} and a not to do list\llink{http://bit.ly/1EDPu2H}.
 }
 
-\cleartorightpage
 \HugeQuote{MA_DL}{If you seek tranquillity, do less}{ or (more accurately) do what's essential because most of what we say and do is not essential.\newline
 Ask yourself at every moment "is this necessary?"}
 {Marcus Aurelius}{}{}
 
+\HugeQuote{MA_SMALL}{You're better off not giving the small things more time than they deserve}{}{Marcus Aurelius}{}
+
+% \hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
+
 \HugeQuote{PD_DL}{There is nothing so useless}{ as doing efficiently that which should not be done at all.}{Peter Drucker}{}{}
 
-\hugeQuote{EP_FOOL}{If you wish to improve}{, be content to appear clueless or stupid in extraneous matters}{Epictetus}{}{}
+\cleartoleftpage
 
+\HugeQuote{PL}{Parkinson's Law}{:\newline
+A task will swell in (perceived) importance and complexity in relation to the time allocated for its completion.}{}{}{}
 
 \hugeQuote{OW_HW}{Hard work}{ is simply the refuge of people how have nothing better to do}{Oscar Wilde}{}{}
 
 \hugeQuote{BD_LIFE}{A man is successful}{ if he gets up in the morning, goes to bed at night and in between does what he wants to.}{Bod Dylan}{BJ_DWYL}{}
 
-\hugeQuote{RH_PIGS2}{Never try to teach a pig to sing.}{\newline It wastes time and annoys the pig.}{Robert Heinlein}{GBS_PIGS1}{} 
-
-
-\clearpage
-\hugeQuote{PL}{Parkinson's Law}{:\newline
-A task will swell in (perceived) importance and complexity in relation to the time allocated for its completion.}{}{}{}
-
-
-\hugeQuote{MA_OBSERVE}{And so I'll treat them as the law that binds us requires}{. \newline With kindness and with justice.\newline And the inconsequential things?\newline I'll do my best to treat them as they deserve.}{Marcus Aurelius}{}{}
-
+\cleartoleftpage
 
 \HugeQuote{MA_CUCUMBER}{The cucumber is bitter?}{\newline
 Then throw it out.\newline
@@ -74,29 +79,20 @@ There are brambles in the path?\newline
 Then go around them.}{Marcus Aurelius}{PL_DST}{}
 
 %TODO: unsure on origin here but likely MA
-\HugeQuote{SP_HABIT}{Of each thought ask yourself}{:
+\HugeQuote{SP_HABIT}{Of each thought ask}{:
 \begin{itemize}
 \item is it necessary?
-\item is it destructive to those around me?
-\item is it really what you think?
-\item is it just self indulgent?
+\item is it harmful to others?
+\item is it true?
+\item is it self indulgent?
 \end{itemize}}{}{}{}
 
 \HugeQuote{MA_GOAL}{If you don't have a consistent goal in life}{, how can you live it in a consistent way?}{Marcus Aurelius}{}{}
 
-\hugeQuote{H_OWN}{They should try to subordinate things to themselves}{ not themselves to things.}{Horace}{RH_HMY}{}
-
-\hugeQuote{FC_OWN}{The things you used to own}{. Now they own you}{Jack, Fight Club}{}{}
-
-
-\hugeQuote{HDT_BACK}{Never look back}{ unless you're planning to go that way.}{Henry David Thoreau}{}{}
-
-\hugeQuote{FP_BACK}{It's a long road there's no turning back}{}{Funki Porcini}{}
-
+\hugeQuote{RH_PIGS2}{Never try to teach a pig to sing.}{ It wastes time and annoys the pig.}{Robert Heinlein}{GBS_PIGS1}{} 
 
 \hugeQuote{RH_6MONTHS}{In six months}{ you will have discarded most of what you claim is important right now.}{Ryan Holiday}{}{}
 
+\cleartorightpage
 \HugeQuote{TF_HARD}{Sometimes the hard stuff is hard because you shouldn't do it in the first place}{}{Tim Ferriss}{}{}
 
-\cleartorightpage
-\HugeQuote{MT_NOMFUP}{NoMFuP}{}{Malcolm Tucker}{}{Handy to remind ourselves what we should be paying attention to.}
