--- a/definitions.tex
+++ b/definitions.tex
@@ -6,7 +6,7 @@
 	\begin{tabularx}{\textwidth}{ lr}
   		\multicolumn{2}{p{1.0\textwidth}}{\label{#1}#2}
   		\tabularnewline \tabularnewline
-  		\ifthenelse{\equal{}{#4}}{}{\S \ref{#4}}& #3 \thesection \index{#3}
+  		\ifthenelse{\equal{}{#4}}{}{\S \ref{#4}}& #3 (\thesection) \index{#3}
   		\tabularnewline
   		\tabularnewline
   		\multicolumn{2}{p{1\textwidth}}{#5} 
