add supporting quote for Hanlon's razor

--- a/Generosity.tex
+++ b/Generosity.tex
@@ -18,6 +18,11 @@
 	\item surly
 \end{itemize}}{Marcus Aurelius}{SL_GIVE}{People are going to be like that from time to time and so long as you remember that you've been like that too you can see the behaviour for what it is.}
 
+
+%\smallQuote{EC_FTP}{Never say that people are evil. You just need to find the pin.}{\'{E}mile-Auguste Chartier}{} 
+
+
+
 \HugeQuote{H_RAZOR}{Hanlon's Razor}{: \newline
 Never attribute to malice that which can be adequately explained by incompetence}{Robert J. Hanlon}{SL_GIVE}{or weakness or fear or hunger or \ldots}
 
