--- a/Introduction.tex
+++ b/Introduction.tex
@@ -4,7 +4,7 @@
 \begin{multicols}{2}
 
 We all want to be better people, shout at the kids less often, get some perspective at work and call our friends and family more. We have a picture of a better version of ourselves but we're still fallible, lazy, tired and busy. Best intentions fall away and we forget our better selves. 
-To make our jobs a little easier we can listen to Marcus Aurelius who tells us that without a goal we can't live consistently (\S \ref{MA_GOAL}). Thinking about the sort of qualities we want to show is a great first step but we need a little more help. Thinking about the sort of person we want to be and looking closely at the qualities they embody we can come up with a consistent goal, a set of high or even unattainable targets. 
+To make our jobs a little easier we can listen to Marcus Aurelius who tells us that without a goal we can't live consistently (\S \ref{MA_GOAL}). Thinking about the sort of qualities we want to show is a great first step to focus the mind and make sure we know where we're going \footnote{Arthur Scopenhauer, \cite{SCM}} but we need a little more help. Thinking about the sort of person we want to be and looking closely at the qualities they embody we can come up with a consistent goal, a set of high or even unattainable targets. 
 
 Even with our goal, we'll still fail. Badly. But to get us through the tough spots We're going to get help from philosophers, deities, sportsmen, fictional characters, artists and people who are far smarter than us. 
 
