add new solitude quote

--- a/Resilience.tex
+++ b/Resilience.tex
@@ -87,6 +87,8 @@ And always take note of Fortune's habit of behaving exactly as she pleases}{Sene
 {Gian Vincenzo Gravina}{}{}
 \smallQuote{RG_ALONE}{Strive to keep yourself free from unnecessary entanglements and alliances}{Robert Greene}{}{}
 
+\smallQuote{AS_ALONE}{The more a man has in himself, the less others can be to him}{Arthur Schopenhauer}{} 
+
 \clearpage
 
 \hugeQuote{A_ALONE}{Happiness depends on ourselves}{}{Aristotle}{}{}
