re-oreder some patience quotes

--- a/Patience.tex
+++ b/Patience.tex
@@ -1,4 +1,5 @@
 \input{PatienceIntro.tex}
+\cleartorightpage
 
 \HugeQuote{ADM_CHARGE}{Ask yourself this question:\newline
 Am I in charge of this situation or is this situation in charge of me?}{}{Anthony De Mello}{}
@@ -6,6 +7,8 @@ Am I in charge of this situation or is this situation in charge of me?}{}{Anthon
 \hugeQuote{ST_WAIT}{Do not make war}{ unless victory may be gained;\newline
 If there is a prospect of vicory move; \newline
 If there is no prospect of victory do not move.}{Sun Tzu}{}{}
+
+\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{ST_WAIT}{}
 
 \hugeQuote{RG_WAIT1}{Impatience}{: perhaps the single greatest pitfall}{Robert Greene}{}{}
 
@@ -19,16 +22,13 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 \HugeQuote{I_GOAL}{It is more important to know where you're going than to get there quickly}{}{Isocrates}{MA_GOAL}{}
 
 
-\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{ST_WAIT}{}
-
 \smallQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it. Your doubts and hestitation will infect your execution.}{Robert Greene}{ST_WAIT}{}
 
 \smallQuote{RG_TALK}{Once the words are out, you cannot take them back. Keep them under control.}{Robert Greene}{}
+\smallQuote{RH_TALK}{The best advice I ever got was "shut up"}{Ryan Holiday}{}{Always say less than necessary\llink{http://tcat.tc/1IwHzGd}.}
+\HugeQuote{P_TALK}{Wise men speak because they have something to say}{; fools speak because they have to say something.}{Plato}{}{}
 
-\hugeQuote{P_TALK}{Wise men speak because they have something to say}{; fools speak because they have to say something.}{Plato}{}{}
-
-\HugeQuote{RH_TALK}{The best advice I ever got}{ was "shut up"}{Ryan Holiday}{}{Always say less than necessary\llink{http://tcat.tc/1IwHzGd}.}
-
+%todo unsure, maybe generosity
 \hugeQuote{H_LIGHT}{Light cares can talk}{ huge ones are strick dumb}{Hippolitus}{}{}
 
 \hugeQuote{BG_ANGER}{Never do anything}{ when you are in a temper, for you will do everything wrong}{Baltazar Gra\c{c}ian}{}{}
@@ -37,7 +37,7 @@ If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
 \hugeQuote{LT_ANGER}{The best fighter is never angry}{}{Lao Tzu}{}
 
-
+\cleartorightpage
 \HugeQuote{AM_FEAR}{Fear is a bad advisor.}{}{Angela Merkel}{}{}
 
 
