re-order patience chapter

--- a/Patience.tex
+++ b/Patience.tex
@@ -1,6 +1,8 @@
 \input{PatienceIntro.tex}
-\cleartorightpage
 
+% timing
+%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartorightpage
 \HugeQuote{ADM_CHARGE}{Ask yourself this question:\newline
 Am I in charge of this situation or is this situation in charge of me?}{}{Anthony De Mello}{}
 
@@ -8,34 +10,55 @@ Am I in charge of this situation or is this situation in charge of me?}{}{Anthon
 If there is a prospect of vicory move; \newline
 If there is no prospect of victory do not move.}{Sun Tzu}{}{}
 
-\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{ST_WAIT}{}
+\hugeQuote{BG_NTL}{Never content with a man who has nothing to lose}{.}{Baltazar Gra\c{c}ian}{}{}
 
-\hugeQuote{RG_WAIT1}{Impatience}{: perhaps the single greatest pitfall}{Robert Greene}{}{}
+\hugeQuote{RG_WAIT1}{Impatience}{: perhaps the single greatest pitfall.}{Robert Greene}{}{}
 
-\hugeQuote{MA_GRIEF}{How much more damage grief and ager do}{ than the things that caused them.}{Marcus Aurelius}{}{}
+\hugeQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it}{. Your doubts and hestitation will infect your execution.}{Robert Greene}{}{}
 
+%judgement
+%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoleftpage
 \hugeQuote{UG_COUNT}{There are always more of them}{ before they are counted.}{Ulysses S Grant}{RH_ENDURE}{}
 
 %TODO seneca at the door
 \hugeQuote{WG_JUDGE}{The senses don't decieve}{, judgement deceives.}{John Von Goethe}{}{}
 
+
+%
+%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartorightpage
 \HugeQuote{I_GOAL}{It is more important to know where you're going than to get there quickly}{}{Isocrates}{MA_GOAL}{}
 
 
-\smallQuote{RG_WAIT2}{If you are unsure of a course of action do not attempt it. Your doubts and hestitation will infect your execution.}{Robert Greene}{ST_WAIT}{}
+% think before you speak
+%%%%%%%%%%%%%%%%%%%%%%%%
+\cleartoleftpage
 
-\smallQuote{RG_TALK}{Once the words are out, you cannot take them back. Keep them under control.}{Robert Greene}{}
-\smallQuote{RH_TALK}{The best advice I ever got was "shut up"}{Ryan Holiday}{}{Always say less than necessary\llink{http://tcat.tc/1IwHzGd}.}
+\hugeQuote{RG_TALK}{Once the words are out}{, you cannot take them back. Keep them under control.}{Robert Greene}{}{}
+\hugeQuote{RH_TALK}{The best advice I ever got}{ was "shut up"}{Ryan Holiday}{}{Always say less than necessary\llink{http://tcat.tc/1IwHzGd}.}
+\cleartorightpage
 \HugeQuote{P_TALK}{Wise men speak because they have something to say}{; fools speak because they have to say something.}{Plato}{}{}
 
 %todo unsure, maybe generosity
-\hugeQuote{H_LIGHT}{Light cares can talk}{ huge ones are strick dumb}{Hippolitus}{}{}
+%%%%%%%%%%%%%%%%%%%%%%%%
+% \hugeQuote{H_LIGHT}{Light cares can talk}{ huge ones are strick dumb}{Hippolitus}{}{}
+% compare people posting on FB vs being truly dumbstruck at events
+% more like generosity but certainly an element of patience needed 
+% for the first class
+%%%%%%%%%%%%%%%%%%%%%%%%
 
+%temper
+%%%%%%%%%%%%%%%%%%%%%%%%
+
+\cleartoleftpage
 \hugeQuote{BG_ANGER}{Never do anything}{ when you are in a temper, for you will do everything wrong}{Baltazar Gra\c{c}ian}{}{}
 
-\hugeQuote{RG_ANGER}{Anger and emotion are strategically conterproductive}{. You must always stay calm and objective}{Robert Greene}{}{}
+% \hugeQuote{RG_ANGER}{Anger and emotion are strategically conterproductive}{. You must always stay calm and objective}{Robert Greene}{}{}
 
 \hugeQuote{LT_ANGER}{The best fighter is never angry}{}{Lao Tzu}{}
+
+\hugeQuote{MA_GRIEF}{How much more damage grief and ager do}{ than the things that caused them.}{Marcus Aurelius}{}{}
 
 \cleartorightpage
 \HugeQuote{AM_FEAR}{Fear is a bad advisor.}{}{Angela Merkel}{}{}
